fixed footer misalignment

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>
                     Bacon ipsum dolor amet pork belly shank rump pork loin boudin kielbasa tri-tip chicken andouille jowl prosciutto corned beef. Tail jowl fatback bresaola kevin, shankle t-bone. 
                 </p>
-                <div class="icons">
+                <div class="icons-01">
                      <i class="fa fa-facebook" ></i>
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                     <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -107,7 +107,7 @@
                 <p>
                     Bacon ipsum dolor amet pork belly shank rump pork loin boudin kielbasa tri-tip chicken andouille jowl prosciutto corned beef. Tail jowl fatback bresaola kevin, shankle t-bone. 
                 </p>
-                <div class="icons">
+                <div class="icons-01">
                      <i class="fa fa-facebook" ></i>
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                     <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -123,7 +123,7 @@
                 <p>
                     Bacon ipsum dolor amet pork belly shank rump pork loin boudin kielbasa tri-tip chicken andouille jowl prosciutto corned beef. Tail jowl fatback bresaola kevin, shankle t-bone. 
                 </p>
-                <div class="icons">
+                <div class="icons-01">
                      <i class="fa fa-facebook" ></i>
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                     <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -152,8 +152,20 @@
 
             <div class="container-06" >
                 <h1>our pilot project</h1>
-                <p>shankle t-bone. Rump beef tri-tip pig leberkas doner swine shank cupim sirloin jerky. Boudin salami prosciutto shankle fatback kevin strip steak picanha.</p>
+                <p>Bacon ipsum dolor amet pork belly shank rump pork loin boudin kielbasa tri-tip chicken andouille jowl prosciutto corned beef. Tail jowlshankle t-bone. Rump beef tri-tip pig leberkas doner swine shank cupim sirloin jerky. Boudin salami prosciutto shankle fatback kevin strip steak picanha.</p>
                 <button>Know more</button>
+           </div>
+
+           <div class="footer">
+               <p>&copy;2016 now.all rights reserved.</p>
+               <p>contact|privacy policy|site map</p>
+               <div class="icons">
+                   <i class="fa fa-facebook" ></i>
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+               </div>
            </div>
 
            
